--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
 
 
-                    <li ver=""><a href="download" target="_blank">下载辅助</a></li>
+                    <li ver=""><a href="https://www.lanzous.com/b235167/" target="_blank">下载辅助</a></li>
                     <li buy=""><a href="https://www.510ka.com/links/16BD5ECF">购买卡密 >></a></li>
                 </ul>
                 <p>支持平台：windows 7/8.1(32位/64位)、windows 10(32位/64位)</p>
@@ -210,6 +210,9 @@
   <div class="footer">
         <p>(☆▽☆) dr3^my9t & Taurus</p>
 	<p class="e">COPYRIGHT © 2017 – 2019 Paomfz ALL RIGHTS RESERVED.</p>
-	<p><a href="" target="_blank">泡面 - CF多功能辅助</a>　　　丨　　　　<a href="" target="https://www.dreamynight.cn">dr3^my9t - blog</a></div>
-    <div class="aplayer" data-id="551568243" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false" data-volume="0.35"></div>
+	<p><a href="" target="_blank">泡面 - CF多功能辅助</a>　　　丨　　　　<a href="https://www.dreamynight.cn" target="dreamynight">dr3^my9t - blog</a></div>
+	<audio controls autoplay="autoplay" loop="loop" style="display:none;">
+  <source src="static/music.mp3" type="audio/mpeg" />
+  </audio>
+   <!-- <div class="aplayer" data-id="551568243" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false" data-volume="0.35"></div>-->
 	</body></html>
