--- a/index.html
+++ b/index.html
@@ -138,12 +138,6 @@
 <div class="daohang">
     <div class="w1080">
         <ul>
-            <li><i></i>
-
-                <a class="hon" href="">
-                    主页/Default
-                </a>
-            </li>
                             <li>
                     <i></i>
                     <a href="#paypal">
@@ -156,8 +150,14 @@
                 </li>
                             <li>
                     <i></i>
-                    <a href="https://discord.gg/AxcqnQp">
+                    <a href="https://jq.qq.com/?_wv=1027&k=5mOGOXA">
                         DC群/Discord Group                   </a>
+                </li>            
+                </li>
+                            <li>
+                    <i></i>
+                    <a href="https://discord.gg/AxcqnQp">
+                        QQ群/QQ Group                   </a>
                 </li>            
             <li style="display: none">
                 
