--- a/download.html
+++ b/download.html
@@ -65,8 +65,8 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="#cfvn" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>软件下载</a>← download
-											<a class="uk-button uk-button-default uk-button-small" href="#intro1" uk-toggle=""><i class="intro"></i>功能介绍</a>← intro
+											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-1122.zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
+											<a class="uk-button uk-button-default uk-button-small" href="#intro1" uk-toggle=""><i class="intro"></i>Intro</a>
 											<div id="intro1" uk-modal="center: true">
 												<div class="uk-modal-dialog">
 													<button class="uk-modal-close-default" type="button" uk-close=""></button>
@@ -101,8 +101,8 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="javascript:;" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>← download
-											<a class="uk-button uk-button-default uk-button-small" href="#intro2" uk-toggle=""><i class="intro"></i>功能介绍</a>← intro
+											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1127.zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
+											<a class="uk-button uk-button-default uk-button-small" href="#intro2" uk-toggle=""><i class="intro"></i>intro</a>
 											<div id="intro2" uk-modal="center: true">
 												<div class="uk-modal-dialog">
 													<button class="uk-modal-close-default" type="button" uk-close=""></button>
@@ -138,8 +138,8 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="#cfph" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>← download
-											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>功能介绍</a>← intro
+											<a href="#cfph" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
+											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>intro</a>
 											<div id="intro3" uk-modal="center: true">
 												<div class="uk-modal-dialog">
 													<button class="uk-modal-close-default" type="button" uk-close=""></button>
