--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFWe-1127 Update with game</li>	
      <li>CFVn-1121 增加英文语言/Add support for English</li>	
      <li>CFVn-1119 & CFPH-1119 对一些游戏可能记录的数据进行防封处理</li>	
      <li>CFVn-1117 挑战挂机支持所有地图,增加新的菜单配置选项</li>	
