--- a/download.html
+++ b/download.html
@@ -61,7 +61,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">CF越南服多功能辅助。　　　　　　　　　　best&cheap cheat for cfvn.</p>
+											<p class="desc">Best&cheap cheat for cfcn.</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -97,7 +97,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">CF美服服多功能辅助。　　　　　　　　　　best&cheap cheat for cfwest.</p>
+											<p class="desc">Best&cheap cheat for cfwest.</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -134,7 +134,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">CF菲律宾多功能辅助。　　　　　　　　　best&cheap cheat for cfph.</p>
+											<p class="desc">Best&cheap cheat for cfph.</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
