--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <ul>
                             <li>
                     <i></i>
-                    <a href="#paypal">
+                    <a href="https://www.128faka.com/links/EE31BF59">
                         购买卡密/Purchase                    </a>
                 </li>
                             <li>
@@ -185,7 +185,7 @@
 
 
                     <li ver=""><a href="https://www.lanzous.com/b235167/" target="_blank">下载辅助</a></li>
-                    <li buy=""><a href="https://www.510ka.com/links/16BD5ECF">购买卡密 >></a></li>
+                    <li buy=""><a href="https://www.128faka.com/links/EE31BF59">购买卡密 >></a></li>
                 </ul>
                 <p>支持平台：windows 7/8.1(32位/64位)、windows 10(32位/64位)</p>
                 <div log="">
