--- a/download.html
+++ b/download.html
@@ -52,7 +52,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="javascript:;" target="_blank">
+													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-1122.zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian-Hax　　　CrossFire VN</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -61,7 +61,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Best&cheap cheat for cfcn.</p>
+											<p class="desc">Best&cheap cheat for cfvn.　　　　　　　 Latest version: CFVN-1122</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -88,7 +88,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="#cfwest" target="_blank">
+													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1127.zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian-Hax　　　CrossFire West</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -97,7 +97,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Best&cheap cheat for cfwest.</p>
+											<p class="desc">Best&cheap cheat for cfwest.　　　　　　　 Latest version: CFWest-1127</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -162,7 +162,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="javascript:;" target="_blank">
+													<ahref="" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">CF外服最新客户端</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -175,7 +175,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="javascript:;" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a href="https://pan.baidu.com/s/1iuz3xTkz_mQU2cVuvRFGAA" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro4" uk-toggle=""><i class="intro"></i>使用事项</a>
 											<div id="intro4" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -204,7 +204,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/PanDownload.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="javascript:;" target="_blank">
+													<a href="http://pandownload.com/" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PanDownload</h3></a>
 													<div class="info" uk-grid="">
 
@@ -219,7 +219,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="javascript:;" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a href="http://pandownload.com/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro5" uk-toggle=""><i class="intro"></i>功能介绍</a>
 											<div id="intro5" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -243,7 +243,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/SpeedPan.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="javascript:;" target="_blank">
+													<a href="https://www.speedpan.com/" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">SpeedPan</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -256,7 +256,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="# " class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a href="https://www.speedpan.com/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro6" uk-toggle=""><i class="intro"></i>功能介绍</a>
 											<div id="intro6" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -280,7 +280,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/download.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="javascript:;" target="_blank">
+													<a href="https://www.lanzous.com/b235167/" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">辅助备用下载地址</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -293,7 +293,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="# " class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a href="https://www.lanzous.com/b235167/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro7" uk-toggle=""><i class="intro"></i>使用事项</a>
 											<div id="intro7" uk-modal="center: true">
 												<div class="uk-modal-dialog">
