--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <ul>
                             <li>
                     <i></i>
-                    <a href="https://www.128faka.com/links/EE31BF59">
+                    <a href="1">
                         购买卡密/Purchase                    </a>
                 </li>
                             <li>
