--- a/download.html
+++ b/download.html
@@ -52,7 +52,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-1122.zip" target="_blank">
+													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-1122(Pass123).zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian-Hax　　　CrossFire VN</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -65,7 +65,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-1122.zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
+											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-1122(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro1" uk-toggle=""><i class="intro"></i>Intro</a>
 											<div id="intro1" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -88,7 +88,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1127.zip" target="_blank">
+													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1127(Pass123)" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian-Hax　　　CrossFire West</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -101,7 +101,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1127.zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
+											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1127(Pass123)" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro2" uk-toggle=""><i class="intro"></i>intro</a>
 											<div id="intro2" uk-modal="center: true">
 												<div class="uk-modal-dialog">
