--- a/download.html
+++ b/download.html
@@ -61,7 +61,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Best&cheap cheat for cfvn.　　　　　　　 Latest version: CFVN-1122</p>
+											<p class="desc">Best&cheap cheat for cfvn.　　　　　　　 Latest version: CFVN-1122　　　　　　　 Password:123</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -97,7 +97,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Best&cheap cheat for cfwest.　　　　　　　 Latest version: CFWest-1127</p>
+											<p class="desc">Best&cheap cheat for cfwest.　　　　　　　 Latest version: CFWest-1127　　　　　　　 Password:123</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
