--- a/index.html
+++ b/index.html
@@ -141,23 +141,23 @@
                             <li>
                     <i></i>
                     <a href="https://www.128faka.com/links/EE31BF59">
-                        购买卡密/Purchase                    </a>
+                        购买卡密||Purchase                    </a>
                 </li>
                             <li>
                     <i></i>
                     <a href="download">
-                        资源下载/Download                    </a>
+                        资源下载||Download                    </a>
                 </li>
                             <li>
                     <i></i>
                     <a href="https://discord.gg/AxcqnQp">
-                        DC群/Discord Group                   </a>
+                        DC群||Discord Group                   </a>
                 </li>            
                 </li>
                             <li>
                     <i></i>
                     <a href="https://jq.qq.com/?_wv=1027&k=5mOGOXA">
-                        QQ群/QQ Group                   </a>
+                        QQ群||QQ Group                   </a>
                 </li>            
             <li style="display: none">
                 
