--- a/download.html
+++ b/download.html
@@ -61,7 +61,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Best&cheap cheat for cfvn.　　　　　　　 Latest version: CFVN-1122　　　　　　　 Password:123</p>
+											<p class="desc">State__________  :  可用| online.　　　　　　　 Latest version: CFVN-1122　　　　　　　 Password:123</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -97,7 +97,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Best&cheap cheat for cfwest.　　　　　　　 Latest version: CFWest-1213　　　　　　　 Password:123</p>
+											<p class="desc">State__________ : 更新中 | updating.　　　　　　　 Latest version: CFWest-1213　　　　　　　 Password:123</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
