--- a/download.html
+++ b/download.html
@@ -1,3 +1,4 @@
+﻿
 <!DOCTYPE html>
 <html>
 
@@ -54,14 +55,16 @@
 												<div class="uk-width-expand">
 													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-1122(Pass123).zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian-Hax　　　CrossFire VN</h3></a>
-													<div class="info" uk-grid="">
+													<div class="info" uk-grid>
+													<div class="uk-width-1-2">Latest version: CFVN-1122</div>
+													<div class>State : <p><font color="#00FF00">online/可用</font></p></div>
 													</div>
 												</div>
 											</div>
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">State__________  :  可用| online.　　　　　　　 Latest version: CFVN-1122　　　　　　　 Password:123</p>
+											<p class="desc">Password:123</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -88,20 +91,24 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1213(Pass123).zip" target="_blank">
+													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1214(Pass123).zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian-Hax　　　CrossFire West</h3></a>
-													<div class="info" uk-grid="">
+													<div class="info" uk-grid>
+													<div class="uk-width-1-2">Latest version: CFWest-1214</div>
+													<div class>State : <p><font color="#00FF00">online/可用</font></p></div>
+
+<!--  <div class="uk-width-1-2">State:<p><font color="#FF0000">updating/更新中</font></p></div> -->
 													</div>
 												</div>
 											</div>
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">State_______ : 更新中 | updating.　　　　　　　 Latest version: CFWest-1213　　　　　　　 Password:123</p>
+											<p class="desc">Password:123</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1213(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
+											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-1214(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro2" uk-toggle=""><i class="intro"></i>intro</a>
 											<div id="intro2" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -122,30 +129,31 @@
 										<div class="uk-card-header">
 											<div class="uk-grid-small uk-flex-middle" uk-grid="">
 												<div class="uk-width-auto">
-													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
+													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/download.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="javascript:;" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian-Hax　　　CrossFire PH</h3></a>
-													<div class="info" uk-grid="">
+													<a href="https://www.lanzous.com/b235167/" target="_blank">
+														<h3 class="uk-card-title uk-margin-remove-bottom">辅助备用下载地址</h3></a>
+													<div class="info" uk-grid>
 													</div>
 												</div>
 											</div>
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Best&cheap cheat for cfph.</p>
+											<p class="desc">国内用户下载 蓝奏云</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="#cfph" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
-											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>intro</a>
+											<a href="https://www.lanzous.com/b235167/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>使用事项</a>
 											<div id="intro3" uk-modal="center: true">
 												<div class="uk-modal-dialog">
 													<button class="uk-modal-close-default" type="button" uk-close=""></button>
 													<div class="uk-modal-body">
-														<h2 class="uk-modal-title">PaoMian Hax - CF PH</h2>
-														<pre class="uk-margin-remove">[1]</pre>
+														<h2 class="uk-modal-title">备用下载地址</h2>
+														<pre class="uk-margin-remove">[1]蓝奏云。
+[2]网盘内容随辅助更新。														</pre>
 													</div>
 												</div>
 											</div>
@@ -182,8 +190,7 @@
 													<button class="uk-modal-close-default" type="button" uk-close=""></button>
 													<div class="uk-modal-body">
 														<h2 class="uk-modal-title">CF外服最新客户端</h2>
-													<pre class="uk-margin-remove">
-[1]请确定分卷文件是否被下载。[例:xxx.z01]
+													<pre class="uk-margin-remove">[1]请确定分卷文件是否被下载。[例:xxx.z01]
 [2]解压后使用,请。
 [3]请自行租用/开通百度会员或者使用第三方/破解客户端下载,不要问速度为什么慢。
 [4]更新随个人能力范围和时间更新。
@@ -264,44 +271,6 @@
 													<div class="uk-modal-body">
 														<h2 class="uk-modal-title">SpeedPan</h2>
 														<pre class="uk-margin-remove">[1]破解百度网盘限速，可能已经失效。</pre>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<!-- card -->
-<div class="content-card-box">
-									<div class="content-card-box-show">
-
-										<div class="uk-card-header">
-											<div class="uk-grid-small uk-flex-middle" uk-grid="">
-												<div class="uk-width-auto">
-													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/download.png">
-												</div>
-												<div class="uk-width-expand">
-													<a href="https://www.lanzous.com/b235167/" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">辅助备用下载地址</h3></a>
-													<div class="info" uk-grid="">
-													</div>
-												</div>
-											</div>
-										</div>
-										<hr class="uk-divider-icon">
-										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">蓝奏云</p>
-										</div>
-										<hr class="uk-hr">
-										<div class="uk-card-footer">
-											<a href="https://www.lanzous.com/b235167/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
-											<a class="uk-button uk-button-default uk-button-small" href="#intro7" uk-toggle=""><i class="intro"></i>使用事项</a>
-											<div id="intro7" uk-modal="center: true">
-												<div class="uk-modal-dialog">
-													<button class="uk-modal-close-default" type="button" uk-close=""></button>
-													<div class="uk-modal-body">
-														<h2 class="uk-modal-title">备用下载地址</h2>
-														<pre class="uk-margin-remove">[1]蓝奏云。
-[2]网盘内容随辅助更新。														</pre>
 													</div>
 												</div>
 											</div>
