--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFWe-1218 Update with game</li>	
      <li>CFVn-1215 更换菜单样式,加强防封.</li>	
      <li>CFWe-1206 Fixed all problems we known,add some functions</li>	
      <li>CFWe-1127 Update with game</li>	
