--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
                     <li ver=""><a href="https://www.lanzous.com/b235167/" target="_blank">下载辅助</a></li>
                     <li buy=""><a href="https://www.128faka.com/links/EE31BF59">购买卡密 >></a></li>
                 </ul>
-                <p>支持平台：windows 7/8.1(32位/64位)、windows 10(32位/64位)</p>
+                <p>支持平台: windows 7/8.1(32位/64位)、windows 10(32位/64位)</p>
+                <p>Contact:  4039295@qq.com</p>
                 <div log="">
                     <div>
                         <p>更新日志/Update Logs:</p>
@@ -213,7 +214,7 @@
   </div>
   <div class="footer">
         <p>(☆▽☆) dr3^my9t & Taurus</p>
-	<p class="e">COPYRIGHT © 2017 – 2019 Paomfz ALL RIGHTS RESERVED.</p>
+	<p class="e">COPYRIGHT © 2017 – 2019 Paomfz ALL RIGHTS RESERVED. Contact:4039295@qq.com</p>
 	<p><a href="" target="_blank">泡面 - CF多功能辅助</a>　　　丨　　　　<a href="https://www.dreamynight.cn" target="dreamynight">dr3^my9t - blog</a></div>
 	<audio controls autoplay="autoplay" loop="loop" style="display:none;">
   <source src="static/music.mp3" type="audio/mpeg" />
