--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </li>
                             <li>
                     <i></i>
-                    <a href="https://jq.qq.com/?_wv=1027&k=5mI8nUw">
+                    <a href="https://jq.qq.com/?_wv=1027&k=5PLQfFz">
                         QQ群||QQ Group                   </a>
                 </li>            
             <li style="display: none">
