--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFVn-1226 过掉1_2错误代码,可无限瞬移加速,删除一些无用功能</li>	
      <li>CFVn\We-1224 防封加强</li>	
      <li>CFWe-1218 Update with game</li>	
      <li>CFVn-1215 更换菜单样式,加强防封.</li>	
