--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </li>
                             <li>
                     <i></i>
-                    <a href="https://discord.gg/AxcqnQp">
+                    <a href="https://discord.gg/qkhKZFE">
                         DC群  ||  Discord Group                   </a>
                 </li>            
                 </li>
