--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -136,12 +136,22 @@
 
 </style>
 <div class="daohang">
-    <div class="w1080">
+    <div class="w1080"> 
         <ul>
                             <li>
                     <i></i>
+                    <a href="https://bbs.paomfz.com/">
+                        论坛 ||  forum       </a>
+                </li>
+                            <li>
+                    <i></i>
+                    <a href="https://bbs.paomfz.com/?thread-4.htm">
+                        Purchase       </a>
+                </li>
+                            <li>
+                    <i></i>
                     <a href="https://www.128faka.com/links/EE31BF59">
-                        购买卡密  ||  Purchase                    </a>
+                        购买卡密       </a>
                 </li>
                             <li>
                     <i></i>
