--- a/index.html
+++ b/index.html
@@ -140,19 +140,14 @@
         <ul>
                             <li>
                     <i></i>
-                    <a href="https://bbs.paomfz.com/">
-                        论坛 ||  forum       </a>
-                </li>
-                            <li>
-                    <i></i>
-                    <a href="https://bbs.paomfz.com/?thread-4.htm">
-                        Purchase       </a>
-                </li>
-                            <li>
-                    <i></i>
                     <a href="download">
                         资源下载  ||  Download                    </a>    
                 </li>
+                            <li>
+                    <i></i>
+                    <a href="https://discord.gg/ShMPbsn">
+                        Discord 群  ||  Discord Group                   </a>
+                </li>      
                             <li>
                     <i></i>
                     <a href="https://jq.qq.com/?_wv=1027&k=5PLQfFz">
