--- a/index.html
+++ b/index.html
@@ -141,8 +141,13 @@
                             <li>
                     <i></i>
                     <a href="download">
-                        资源下载  ||  Download                    </a>    
+                        Download                    </a>    
                 </li>
+                            <li>
+                    <i></i>
+                    <a href="https://www.youtube.com/channel/UCW4NCd-Y9lrBLsVkpqETyBg?from=singlemessage">
+                        YouTube Channel                  </a>
+                </li>    
                             <li>
                     <i></i>
                     <a href="https://discord.gg/ShMPbsn">
