--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFVn-0217 修复因人物透视造成的18_4代码</li>	
      <li>CFVn-1226 过掉1_2错误代码,可无限瞬移加速,删除一些无用功能</li>	
      <li>CFVn\We-1224 防封加强</li>	
      <li>CFWe-1218 Update with game</li>	
