--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <li>
                     <i></i>
                     <a href="download">
-                        Download                    </a>    
+                        Download  ||  下载中心              </a>    
                 </li>
                             <li>
                     <i></i>
