--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="”viewport”" content="”width=1050," initial-scale="1.0," minimum-scale="1.0," maximum-scale="1.0″">
     <meta name="csrf-param" content="_csrf">
     <meta name="csrf-token" content="dhd5ICmvmAvPUI4N36v-6o0et4bu3cCaLQ0qvfLfNlQAZhBxS-Ouepkn5E6Km4_S4lzuq6ObpNt_b0P1g69FAQ==">
-    <title>CF泡面辅助官网,泡面辅助,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,CF越南服官网,CF越南服,CF越南服下载,CF越南服最新,CF越南服外挂,www.paomfz.com,HACK CF,CFVN VIP CHEAT,PaoMianHax</title>
+    <title>泡面辅助  ||  PaoMian Hax</title>
     <meta name="keywords" content="CF泡面辅助官网,泡面辅助,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,CF越南服官网,CF越南服,CF越南服下载,CF越南服最新,CF越南服外挂,www.paomfz.com,HACK CF,CFVN VIP CHEAT,PaoMianHax">
 <link href="static/css/style.css" rel="stylesheet" 0="frontend\assets\AppAsset">
 <link href="static/css/base.css" rel="stylesheet">
@@ -186,8 +186,7 @@
                     <li ver=""><a href="https://www.lanzous.com/b235167/" target="_blank">下载辅助</a></li>
                     <li buy=""><a href="https://www.128faka.com/links/EE31BF59">购买卡密 >></a></li>
                 </ul>
-                <p>支持平台: windows 7/8.1(32位/64位)、windows 10(32位/64位)</p>
-                <p>Contact:  4039295@qq.com</p>
+                <p>支持平台: windows XP,7,8.1,10(32位/64位)</p>
                 <div log="">
                     <div>
                         <p>更新日志/Update Logs:</p>
