--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
         <ul>
                             <li>
                     <i></i>
+                    <a href="https://pay.paomfz.com/product/1.html">
+                        Purchase & Buy            </a>    
+                </li>
+                            <li>
+                    <i></i>
                     <a href="download">
                         Download  ||  下载中心              </a>    
                 </li>
