--- a/download.html
+++ b/download.html
@@ -54,7 +54,7 @@
 												</div>
 												<div class="uk-width-expand">
 													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-0217(Pass123).zip" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP Hack　　　               CrossFire VN</h3></a>
+														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP  CrossFire VN</h3></a>
 													<div class="info" uk-grid>
 													<div class="uk-width-1-2">Latest version: CFVN-0217</div>
 													       <div class>State : <p><font color="#00FF00">online/可用</font></p></div>    
@@ -94,7 +94,7 @@
 												</div>
 												<div class="uk-width-expand">
 													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0221(Pass123).zip" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP Hack　　　               CrossFire West</h3></a>
+														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP  CrossFire West</h3></a>
 													<div class="info" uk-grid>
 													<div class="uk-width-1-2">Latest version: CFWest-0221   </div>
 													       <div class>State : <p><font color="#00FF00">online/可用</font></p></div>       
