--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="”viewport”" content="”width=1050," initial-scale="1.0," minimum-scale="1.0," maximum-scale="1.0″">
     <meta name="csrf-param" content="_csrf">
     <meta name="csrf-token" content="dhd5ICmvmAvPUI4N36v-6o0et4bu3cCaLQ0qvfLfNlQAZhBxS-Ouepkn5E6Km4_S4lzuq6ObpNt_b0P1g69FAQ==">
-    <title>泡面辅助,PaoMian Hax,CF泡面辅助官网,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,CF越南服官网,CF越南服,CF越南服下载,CF越南服最新,CF越南服外挂,www.paomfz.com,HACK CF,CFVN VIP CHEAT</title>
+    <title>泡面辅助  ||  PaoMian Hax</title>
     <meta name="keywords" content="泡面辅助,PaoMian Hax,CF泡面辅助官网,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,CF越南服官网,CF越南服,CF越南服下载,CF越南服最新,CF越南服外挂,www.paomfz.com,HACK CF,CFVN VIP CHEAT">
 <link href="static/css/style.css" rel="stylesheet" 0="frontend\assets\AppAsset">
 <link href="static/css/base.css" rel="stylesheet">
