--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>泡面辅助 - 游戏资源下载</title>
+		<title>泡面辅助  -  下载 Download</title>
 		<meta name="keywords" content="CF泡面辅助官网,泡面辅助,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,www.paomfz.com,HACK CF VIP CHEAT">
 		<link rel="stylesheet" type="text/css" href="static/css/core.css">
 		<link rel="stylesheet" type="text/css" href="static/css/coret.css">
