--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFVn-0227 优化辅助链接服务器,瞬移增加自动瞬移选项</li>	
      <li>CFVn-0217 修复因人物透视造成的18_4代码</li>	
      <li>CFVn-1226 过掉1_2错误代码,可无限瞬移加速,删除一些无用功能</li>	
      <li>CFVn\We-1224 防封加强</li>	
