--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   </div>
   <div class="footer">
         <p>(☆▽☆) dr3^my9t & Taurus</p>
-	<p class="e">COPYRIGHT © 2017 – 2019 Paomfz ALL RIGHTS RESERVED. Contact:4039295@qq.com</p>
+	<p class="e">COPYRIGHT © 2017 – 2019 Paomfz ALL RIGHTS RESERVED. Contact:</p>
 	<p><a href="" target="_blank">泡面 - CF多功能辅助</a>　　　丨　　　　<a href="https://www.dreamynight.cn" target="dreamynight">dr3^my9t - blog</a></div>
 	<audio controls autoplay="autoplay" loop="loop" style="display:none;">
   <source src="static/music.mp3" type="audio/mpeg" />
