--- a/index.html
+++ b/index.html
@@ -160,7 +160,12 @@
                         QQ群  ||  QQ Group                   </a>
                 </li>            
             <li style="display: none">
-                
+                            <li>
+                    <i></i>
+                    <a href="https://discord.gg/PxqGUt">
+                        Discord Group                   </a>
+                </li>            
+            <li style="display: none">                
             </li>
         </ul>
 
