--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <li style="display: none">
                             <li>
                     <i></i>
-                    <a href="https://discord.gg/PxqGUt">
+                    <a href="https://discord.gg/BJ6DFrr">
                         Discord Group                   </a>
                 </li>            
             <li style="display: none">                
