--- a/download.html
+++ b/download.html
@@ -96,10 +96,10 @@
 													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0330(Pass123).zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP  CrossFire West</h3></a>
 													<div class="info" uk-grid>
-													<div class="uk-width-1-2">Latest version: CFWest-0330   </div>
-													       <div class>State : <p><font color="#00FF00">online/可用</font></p></div>        
+													 <!-- <div class="uk-width-1-2">Latest version: CFWest-0330   </div>
+													       <div class>State : <p><font color="#00FF00">online/可用</font></p></div>        --> 
 
- <!--  <div class="uk-width-1-2">State:<p><font color="#FF0000">updating/更新中</font></p></div>   --> 
+  <div class="uk-width-1-2">State:<p><font color="#FF0000">updating/更新中</font></p></div>   
 													</div>
 												</div>
 											</div>
