--- a/index.html
+++ b/index.html
@@ -148,12 +148,7 @@
                     <i></i>
                     <a href="download">
                         Download  ||  下载中心              </a>    
-                </li>    
-                            <li>
-                    <i></i>
-                    <a href="https://discord.gg/ShMPbsn">
-                        Discord 群  ||  Discord Group                   </a>
-                </li>      
+                </li>     
                             <li>
                     <i></i>
                     <a href="https://jq.qq.com/?_wv=1027&k=5PLQfFz">
@@ -197,6 +192,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFVn-0405 增加被踢自动炸房和修改Ping</li>	
      <li>CFVn-0327 重新过代码31-9(REZ),增加提高命中大小</li>	
      <li>CFVn-0227 优化辅助链接服务器,瞬移增加自动瞬移选项</li>	
      <li>CFVn-0217 修复因人物透视造成的18_4代码</li>	
