--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
 
 
-                    <li ver=""><a href="https://www.lanzous.com/b235167/" target="_blank">下载辅助</a></li>
+                    <li ver=""><a href="https://lanzous.com/b0svooah" target="_blank">下载辅助</a></li>
                     <li buy=""><a href="https://www.128faka.com/links/EE31BF59">购买卡密 >></a></li>
                 </ul>
                 <p>支持平台: windows XP,7,8.1,10(32位/64位)</p>
