--- a/download.html
+++ b/download.html
@@ -134,7 +134,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/download.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="https://www.lanzous.com/b235167/" target="_blank">
+													<a href="https://lanzous.com/b0svooah/" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">辅助备用下载地址</h3></a>
 													<div class="info" uk-grid>
 													</div>
@@ -147,7 +147,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="https://www.lanzous.com/b235167/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a href="https://lanzous.com/b0svooah/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>使用事项</a>
 											<div id="intro3" uk-modal="center: true">
 												<div class="uk-modal-dialog">
