--- a/download.html
+++ b/download.html
@@ -143,7 +143,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">国内用户下载 蓝奏云</p>
+											<p class="desc">蓝奏云</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
