--- a/index.html
+++ b/index.html
@@ -179,13 +179,14 @@
 
 
                     <li ver=""><a href="https://lanzous.com/b0svooah" target="_blank">下载辅助</a></li>
-                    <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密 >></a></li>
+                    <li buy=""><a href="https://www.128faka.com/links/EE31BF59">购买卡密 >></a></li>
                 </ul>
                 <p>支持平台: windows XP,7,8.1,10(32位/64位)</p>
                 <div log="">
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFVn-0510 增加自定义全屏秒杀和主动炸房</li>	
      <li>CFVn-0405 增加被踢自动炸房和修改Ping</li>	
      <li>CFVn-0327 重新过代码31-9(REZ),增加提高命中大小</li>	
      <li>CFVn-0227 优化辅助链接服务器,瞬移增加自动瞬移选项</li>	
