--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
 
 
-                    <li ver=""><a href="https://lanzous.com/b0svooah" target="_blank">下载辅助</a></li>
-                    <li buy=""><a href="https://www.128faka.com/links/EE31BF59">购买卡密 >></a></li>
+                    <li ver=""><a href="https://pmhax.lanzous.com/b0svooah" target="_blank">下载辅助</a></li>
+                    <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密 >></a></li>
                 </ul>
                 <p>支持平台: windows XP,7,8.1,10(32位/64位)</p>
                 <div log="">
