--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
                     <i></i>
                     <a href="download">
                         Download  ||  下载中心              </a>    
+                </li>
+                            <li>
+                    <i></i>
+                    <a href="https://jq.qq.com/?_wv=1027&k=w2oLUHep">
+                        QQ群              </a>     
                 </li>            
             <li style="display: none">
                             <li>
