--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 
 
-                    <li ver=""><a href="https://pmhax.lanzous.com/b0svooah" target="_blank">下载辅助</a></li>
+                    <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">下载辅助</a></li>
                     <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密 >></a></li>
                 </ul>
                 <p>支持平台: windows XP,7,8.1,10(32位/64位)</p>
