--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFVn-0706 增加自定义修改Ping</li>	
      <li>CFVn-0510 增加自定义全屏秒杀和主动炸房</li>	
      <li>CFVn-0405 增加被踢自动炸房和修改Ping</li>	
      <li>CFVn-0327 重新过代码31-9(REZ),增加提高命中大小</li>	
