--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
+     <li>CFVn-0707-2 过游戏外挂检测</li>
      <li>CFVn-0707 修复秒杀生化选敌和挑战问题</li>
      <li>CFVn-0706 增加自定义修改Ping</li>	
      <li>CFVn-0510 增加自定义全屏秒杀和主动炸房</li>	
