--- a/index.html
+++ b/index.html
@@ -187,28 +187,12 @@
                     <div>
                         <p>更新日志/Update Logs:</p>
                         <ul>
-     <li>CFVn-0707-2 过游戏外挂检测</li>
+     <li>CFVn-0713 去掉游戏31-0,31-10错误代码</li>
+     <li>CFVn-0707-2 去掉游戏外挂检测</li>
      <li>CFVn-0707 修复秒杀生化选敌和挑战问题</li>
      <li>CFVn-0706 增加自定义修改Ping</li>	
      <li>CFVn-0510 增加自定义全屏秒杀和主动炸房</li>	
-     <li>CFVn-0405 增加被踢自动炸房和修改Ping</li>	
-     <li>CFVn-0327 重新过代码31-9(REZ),增加提高命中大小</li>	
-     <li>CFVn-0227 优化辅助链接服务器,瞬移增加自动瞬移选项</li>	
-     <li>CFVn-0217 修复因人物透视造成的18_4代码</li>	
-     <li>CFVn-1226 过掉1_2错误代码,可无限瞬移加速,删除一些无用功能</li>	
-     <li>CFVn\We-1224 防封加强</li>	
-     <li>CFWe-1218 Update with game</li>	
-     <li>CFVn-1215 更换菜单样式,加强防封.</li>	
-     <li>CFWe-1206 Fixed all problems we known,add some functions</li>	
-     <li>CFWe-1127 Update with game</li>	
-     <li>CFVn-1121 增加英文语言/Add support for English</li>	
-     <li>CFVn-1119 & CFPH-1119 对一些游戏可能记录的数据进行防封处理</li>	
-     <li>CFVn-1117 挑战挂机支持所有地图,增加新的菜单配置选项</li>	
-     <li>CFVn-1106 绘制越南语文字,增加自动创建挑战房间,修改挑战挂机点,增加可选挑战自瞄位置</li>	
-     <li>CFWe-1028 解决无法注入问题</li>	
-     <li>CFVn-1025 辅助跟随游戏更新,优化鼠标自瞄,配置渐变发光颜色</li>	
-     <li>CFVn-1022 瞬移过1_2代码,修改挑战挂机点</li>	
-     <li>CFVn-1012 使用GetBox重新绘制方框,重新绘制实体类骨骼</li>					  
+     <li>CFVn-0405 增加被踢自动炸房和修改Ping</li>					  
 </ul>
                     </div>
                 </div>
