--- a/down/download.html
+++ b/down/download.html
@@ -53,13 +53,13 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-0328(Pass123).zip" target="_blank">
+													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-0722(Pass123).zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP  CrossFire VN</h3></a>
 													<div class="info" uk-grid>
-													<div class="uk-width-1-2">Latest version: CFVN-0328</div>
-													      <div class>State : <p><font color="#00FF00">online/可用</font></p></div>  
+													<div class="uk-width-1-2">Latest version: CFVN-0722</div>
+													<div class>State : <p><font color="#00FF00">Online/可用</font></p></div>    
 
-  <!--   <div class="uk-width-1-2">State:<p><font color="#FF0000">updating/更新中</font></p></div>    -->  
+    <!--       <div class="uk-width-1-2">State:<p><font color="#FF0000">Updating/更新中</font></p></div> -->   
 													</div>
 												</div>
 											</div>
@@ -70,7 +70,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-0328(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
+											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVN-0722(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro1" uk-toggle=""><i class="intro"></i>Intro</a>
 											<div id="intro1" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -93,13 +93,13 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0403(Pass123).zip" target="_blank">
+													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0721(Pass123).zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP  CrossFire West</h3></a>
 													<div class="info" uk-grid>
-													  <div class="uk-width-1-2">Latest version: CFWest-0403   </div>
-													<!--       <div class>State : <p><font color="#00FF00">online/可用</font></p></div>        --> 
+													  <div class="uk-width-1-2">Latest version: CFWest-0721   </div>
+													     <div class>State : <p><font color="#00FF00">Online/可用</font></p></div>       
 
-  <div class="uk-width-1-2">State:<p><font color="#FF0000">updating/更新中</font></p></div>   
+ <!--       <div class="uk-width-1-2">State:<p><font color="#FF0000">Updating/更新中</font></p></div>       --> 
 													</div>
 												</div>
 											</div>
@@ -110,7 +110,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0403(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
+											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0721(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro2" uk-toggle=""><i class="intro"></i>intro</a>
 											<div id="intro2" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -134,7 +134,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/download.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="https://www.lanzous.com/b235167/" target="_blank">
+													<a href="https://www.lanzoux.com/b0svooah" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">辅助备用下载地址</h3></a>
 													<div class="info" uk-grid>
 													</div>
@@ -143,11 +143,11 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">国内用户下载 蓝奏云</p>
+											<p class="desc">蓝奏云</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="https://www.lanzous.com/b235167/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a href="https://www.lanzoux.com/b0svooah/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>使用事项</a>
 											<div id="intro3" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -296,7 +296,7 @@
 					</div>
 				</div>
 				<div class="about">
-					<p class="uk-margin-remove-bottom"> Copyright © 2017-2019 Paomfz.com All Rights Reserved&nbsp;
+					<p class="uk-margin-remove-bottom"> Copyright © 2017-2020 Paomfz.com All Rights Reserved&nbsp;
 					</p>
 				</div>
 			</div>
