--- a/index.html
+++ b/index.html
@@ -143,13 +143,8 @@
                             <li>
                     <i></i>
                     <a href="download">
-                        Download  ||  下载中心              </a>    
-                </li>
-                            <li>
-                    <i></i>
-                    <a href="https://jq.qq.com/?_wv=1027&k=w2oLUHep">
-                        QQ群              </a>     
-                </li>            
+                        Download               </a>    
+                </li>          
             <li style="display: none">
                             <li>
                     <i></i>
@@ -163,7 +158,7 @@
 
         <div class="soft">
             <div right="">
-                <p slogan="">PaoMian Hax</p>
+                <p slogan="">PaoMian Hax For CrossFire</p>
                 <ul>
 
 
@@ -179,20 +174,15 @@
 
 
 
-                    <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">下载辅助</a></li>
-                    <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密 >></a></li>
+                    <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">Download</a></li>
+                    <li buy=""><a href="https://www.128faka.com/links/47CE658F">Purchase>></a></li>
                 </ul>
-                <p>支持平台: windows XP,7,8.1,10(32位/64位)</p>
+                <p>Support: windows XP,7,8.1,10(32位/64位)</p>
                 <div log="">
                     <div>
-                        <p>更新日志/Update Logs:</p>
+                        <p>Update Logs:</p>
                         <ul>
-     <li>CFVn-0713 去掉游戏31-0,31-10错误代码</li>
-     <li>CFVn-0707-2 去掉游戏外挂检测</li>
-     <li>CFVn-0707 修复秒杀生化选敌和挑战问题</li>
-     <li>CFVn-0706 增加自定义修改Ping</li>	
-     <li>CFVn-0510 增加自定义全屏秒杀和主动炸房</li>	
-     <li>CFVn-0405 增加被踢自动炸房和修改Ping</li>					  
+     <li>CFVn-0713 None</li>			  
 </ul>
                     </div>
                 </div>
@@ -203,7 +193,7 @@
   <div class="footer">
         <p>(☆▽☆) dr3^my9t & Taurus</p>
 	<p class="e">COPYRIGHT © 2017 – 2020 Paomfz ALL RIGHTS RESERVED. Contact:</p>
-	<p><a href="" target="_blank">泡面 - CF多功能辅助</a>　　　丨　　　　<a href="https://www.dreamynight.cn" target="dreamynight">dr3^my9t - blog</a></div>
+	<p><a href="" target="_blank">PaoMian Hax is a team supply cheats for universal crossfire</a>　　　丨　　　　<a href="https://www.dreamynight.cn" target="dreamynight">dr3^my9t - blog</a></div>
 	<audio controls autoplay="autoplay" loop="loop" style="display:none;">
   <source src="static/music.mp3" type="audio/mpeg" />
   </audio>
