--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ﻿
+
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta name="baidu-site-verification" content="vjqHMTOxEG" />
+    <meta name="baidu-site-verification" content="vjqHMTOxEG">
     <meta charset="UTF-8">
     <meta http-equiv="Cache-Control" content="no-transform">
     <meta http-equiv="Cache-Control" content="no-siteapp">
@@ -13,7 +14,6 @@
     <meta name="keywords" content="泡面辅助,PaoMian Hax,CF泡面辅助官网,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,CF越南服官网,CF越南服,CF越南服下载,CF越南服最新,www.paomfz.com,HACK CF,CFVN VIP CHEAT">
 <link href="static/css/style.css" rel="stylesheet" 0="frontend\assets\AppAsset">
 <link href="static/css/base.css" rel="stylesheet">
-<link href="static/css/popup.css" rel="stylesheet">
 <link rel="stylesheet" href="static/css/APlayer.min.css">
 <script src="static/js/jquery-1.9.1.min.js"></script>
 <script src="static/js/yii.js"></script>    <meta property="qc:admins" content="73675427776516741672116375">
@@ -24,7 +24,7 @@
 <body class="index">    
     <style>
     .daohang{
-        background: url("static/images/H436f35d83849433281bf453d39237ed.jpg") no-repeat center;
+        background: url("static/image/H436f35d83849433281bf453d39237ed.jpg") no-repeat center;
         height: 1080px;
     }
     .daohang li a
@@ -69,7 +69,7 @@
     .soft>div[left]>div
     {
         height: 150px;
-        background: url("https://ae01.alicdn.com/kf/H436f35d83849433281bf453d39237edcc.jpg") no-repeat left 11px;
+        background: url("static/image/H436f35d83849433281bf453d39237ed.jpg") no-repeat left 11px;
         padding-left: 30px;
     }
     .soft>div[left] p[title]
@@ -109,7 +109,7 @@
 
     .soft>div[right] li[ver]
     {
-        background: url("static/images/icon_cloud.png") no-repeat 8px 16px #FF0032;
+        background: url("static/image/icon_cloud.png") no-repeat 8px 16px #FF0032;
     }
     .soft>div[right] li[ver] a
     {
@@ -127,7 +127,7 @@
     .soft>div[right] div[log]
     {
         margin: 21px 0;
-        background: url("static/images/log_bg.png") repeat;
+        background: url("static/image/log_bg.png") repeat;
         width: 400px;
         height: 100%;
         display: inline-block;
@@ -139,16 +139,16 @@
 <div class="daohang">
     <div class="w1080"> 
         <ul>
-                </li>
+                
                             <li>
                     <i></i>
-                    <a href="download">
+                    <a href="download.html">
                         Download               </a>    
                 </li>          
             <li style="display: none">
                             <li>
                     <i></i>
-                    <a href="https://discord.gg/BJ6DFrr">
+                    <a href="javascript:;">
                         Discord Group                   </a>
                 </li>            
             <li style="display: none">                
@@ -174,8 +174,8 @@
 
 
 
-                    <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">Download</a></li>
-                    <li buy=""><a href="https://www.128faka.com/links/47CE658F">Purchase>></a></li>
+                    <li ver=""><a href="javascript:;" target="_blank">Download</a></li>
+                    <li buy=""><a href="javascript:;">Purchase>></a></li>
                 </ul>
                 <p>Support: windows XP,7,8.1,10(32位/64位)</p>
                 <div log="">
@@ -192,11 +192,12 @@
   </div>
   <div class="footer">
         <p>(☆▽☆) dr3^my9t & Taurus</p>
-	<p class="e">COPYRIGHT © 2017 – 2020 Paomfz ALL RIGHTS RESERVED. Contact:</p>
-	<p><a href="" target="_blank">PaoMian Hax is a team that since 2016 brings quality services in various areas(except china).
-</a>　　　丨　　　　<a href="https://www.dreamynight.cn" target="dreamynight">dr3^my9t - blog</a></div>
-	<audio controls autoplay="autoplay" loop="loop" style="display:none;">
-  <source src="static/music.mp3" type="audio/mpeg" />
+	<p>COPYRIGHT © 2017 – 2020 Paomfz ALL RIGHTS RESERVED. Contact:</p>
+	<p>PaoMian Hax is a team that since 2016 brings quality services in various areas. (Except China)</p>
+	<p><a href="https://www.paomfz.com" target="PaoMian">PaoMian Hax
+</a>　　　　丨　　　　<a href="javascript:;" target="dreamynight">dr3^my9t - blog</a></p></div>
+	<audio controls="" autoplay="autoplay" loop="loop" style="display:none;">
+  <source src="static/music.mp3" type="audio/mpeg">
   </audio>
    <!-- <div class="aplayer" data-id="551568243" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false" data-volume="0.35"></div>-->
 	</body></html>
