--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="index">    
     <style>
     .daohang{
-        background: url("static/image/H436f35d83849433281bf453d39237ed.jpg") no-repeat center;
+        background: url("static/images/H436f35d83849433281bf453d39237ed.jpg") no-repeat center;
         height: 1080px;
     }
     .daohang li a
@@ -69,7 +69,7 @@
     .soft>div[left]>div
     {
         height: 150px;
-        background: url("static/image/H436f35d83849433281bf453d39237ed.jpg") no-repeat left 11px;
+        background: url("static/images/H436f35d83849433281bf453d39237ed.jpg") no-repeat left 11px;
         padding-left: 30px;
     }
     .soft>div[left] p[title]
@@ -109,7 +109,7 @@
 
     .soft>div[right] li[ver]
     {
-        background: url("static/image/icon_cloud.png") no-repeat 8px 16px #FF0032;
+        background: url("static/images/icon_cloud.png") no-repeat 8px 16px #FF0032;
     }
     .soft>div[right] li[ver] a
     {
@@ -127,7 +127,7 @@
     .soft>div[right] div[log]
     {
         margin: 21px 0;
-        background: url("static/image/log_bg.png") repeat;
+        background: url("static/images/log_bg.png") repeat;
         width: 400px;
         height: 100%;
         display: inline-block;
