--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>泡面辅助  -  下载 Download</title>
+		<title>PaoMian Hax  -   Download</title>
 		<meta name="keywords" content="CF泡面辅助官网,泡面辅助,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,www.paomfz.com,HACK CF VIP CHEAT">
 		<link rel="stylesheet" type="text/css" href="static/css/core.css">
 		<link rel="stylesheet" type="text/css" href="static/css/coret.css">
@@ -24,7 +24,7 @@
 				<div class="uk-navbar-right">
 					<ul class="uk-navbar-nav">
 						<li class="uk-active">
-							<a href="#">首页</a>
+							<a href="#">Home Page</a>
 						</li>
 					</ul>
 				</div>
@@ -34,9 +34,9 @@
 			<div class="c1200">
 				<ul uk-tab="">
 					<li>
-						<a href="#">外服资源</a>
+						<a href="#">CrossFire</a>
 					</li><li>
-						<a href="#">国服资源</a>
+						<a href="#">None</a>
 					</li>
 				</ul>
 				<ul class="uk-switcher uk-margin">
@@ -106,7 +106,7 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">Password:123  ||  解压密码:123        >Use dummy account to keep safe  ||  请使用小号< </p>
+											<p class="desc">Password:123  ||  解压密码:123 </p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
@@ -135,7 +135,7 @@
 												</div>
 												<div class="uk-width-expand">
 													<a href="https://www.lanzoux.com/b0svooah" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">辅助备用下载地址</h3></a>
+														<h3 class="uk-card-title uk-margin-remove-bottom">备用下载地址</h3></a>
 													<div class="info" uk-grid>
 													</div>
 												</div>
