--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
     </ul>
     <div class="soft">
       <div right="">
-        <p slogan="">PaoMian Hax CrossFire</p>
+        <p slogan="">PaoMian Hax</p>
+        <p slogan="">ĐỘT KÍCH</p>
         <ul>
           <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">Download</a></li>
           <li buy=""><a href="https://www.128faka.com/links/47CE658F">Purchase>></a></li>
@@ -146,7 +147,7 @@
           <div>
             <p>Update Logs:</p>
             <ul>
-              <li>CFVn-0713 None</li>
+              <li>None</li>
             </ul>
           </div>
         </div>
