--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
 <div class="daohang">
   <div class="w1080">
     <ul>
+                            <li>
+                    <i></i>
+                    <a href="https://pay.paomfz.com/product/1.html">
+                        Purchase              </a>     
       <li> <i></i> <a href="download"> Download </a> </li>
       <li style="display: none">
                             <li>
