--- a/download.html
+++ b/download.html
@@ -99,7 +99,7 @@
 												 		  <div class="uk-width-1-2">Latest version: CFWest-1008   </div>
 												        <div class>State : <p><font color="#00FF00">Online/可用</font></p></div>   
 
- <!--   <div class="uk-width-1-2">State:<p><font color="#FF0000">Updating/更新中        --></font></p></div>     
+ <!--   <div class="uk-width-1-2">State:<p><font color="#FF0000">Updating/更新中        </font></p></div>     -->
 													</div>
 												</div>
 											</div>
