--- a/download.html
+++ b/download.html
@@ -70,7 +70,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax- CFVn-1014(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
+											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-1014(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro1" uk-toggle=""><i class="intro"></i>Intro</a>
 											<div id="intro1" uk-modal="center: true">
 												<div class="uk-modal-dialog">
