--- a/love/index.html
+++ b/love/index.html
@@ -26,9 +26,11 @@
                         <img src="./images/love.gif" alt="loverab" class="pig1">
                         <img src="./images/hengji.gif" alt="hengji" class="pig2">
                     <div class="page1-lovexhj1">
-                        <img src="https://q1.qlogo.cn/g?b=qq&nk=647878441&s=640" alt="wyx">
+  <!--                     <img src="https://q1.qlogo.cn/g?b=qq&nk=647878441&s=640" alt="wyx"> -->
+                            <img src="./images/love2.jpg"" alt="dyq">
                         <img src="./images/cat.gif" alt="cat">
-                        <img src="https://q1.qlogo.cn/g?b=qq&nk=4039295&s=640" alt="czx">
+						<img src="./images/love1.jpg" alt="czx">
+   <!--                     <img src="https://q1.qlogo.cn/g?b=qq&nk=4039295&s=640" alt="czx"> -->
                         <p id="lovetime"></p>
                         <p>我也不知道该准备一点什么给你逗你开心</p>
                         <p>就随便做个网页吧</p>
