--- a/love/index.html
+++ b/love/index.html
@@ -33,7 +33,7 @@
    <!--                     <img src="https://q1.qlogo.cn/g?b=qq&nk=4039295&s=640" alt="czx"> -->
                         <p id="lovetime"></p>
                         <p>我也不知道该准备一点什么给你逗你开心</p>
-                        <p>就随便做个网页吧</p>
+                        <p>就做个网页见证我们在一起的时间吧</p>
     </div>
                     </div>
                 </div>
