--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                         Purchase              </a>     
       <li> <i></i> <a href="download"> Download </a> </li>
       <li style="display: none">
+
                             <li>
                     <i></i>
                     <a href="https://jq.qq.com/?_wv=1027&k=w2oLUHep">
@@ -156,7 +157,9 @@
           <div>
             <p>Update Logs:</p>
             <ul>
-              <li>None</li>
+              <li>CFVN-0131:</li>
+              <li>          增加房间变卡,修复个人模式秒杀选择目标</li>
+              <li>          Add Room Lag,improve Instant kill target on FFA mode</li>
             </ul>
           </div>
         </div>
