--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <ul>
               <li>CFVN-0131:</li>
               <li>          增加房间变卡,修复个人模式秒杀选择目标</li>
-              <li>          Add Room Lag,improve Instant kill target on FFA mode</li>
+              <li>          Add Room Lag,improve Instant kill killer on FFA mode</li>
             </ul>
           </div>
         </div>
