--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <p slogan="">PaoMian Hax</p>
         <p slogan=""></p>
         <ul>
-          <li ver=""><a href="https://wwx.lanzoux.com/b0svooah" target="_blank">下载中心</a></li>
+          <li ver=""><a href="https://wwx.lanzoui.com/b0svooah" target="_blank">下载中心</a></li>
           <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密>></a></li>
         </ul>
         <p>Support: windows XP,7,8.1,10  (32bit/64bit)</p>
