--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
           <div>
             <p>Update Logs:</p>
             <ul>
+              <li>CFVN-0227:</li>
+              <li>          增加挑战秒杀,修复修改人物动作无效</li>
+              <li>          Add auto kill ai,fix animation hack.</li>
               <li>CFVN-0131:</li>
               <li>          增加房间变卡,修复个人模式秒杀选择目标</li>
               <li>          Add Room Lag,improve Instant kill killer on FFA mode</li>
