--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
           <div>
             <p>Update Logs:</p>
             <ul>
+              <li>CFVn-0302:</li>
+              <li>          增加挑战秒杀自定义</li>
+              <li>          Add auto kill ai custom killer setting.</li>
               <li>CFVn-0227/CFWest-0228:</li>
               <li>          增加挑战秒杀,修复修改人物动作无效</li>
               <li>          Add auto kill ai,fix animation hack.</li>
