--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
           <div>
             <p>Update Logs:</p>
             <ul>
+              <li>CFVn-0310:</li>
+              <li>          修复挑战模式部分怪物无法击杀</li>
+              <li>          Fix auto kill ai can not all monsters.</li>
               <li>CFVn-0302:</li>
               <li>          增加挑战秒杀自定义</li>
               <li>          Add auto kill ai custom killer setting.</li>
