--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div>
             <p>Update Logs:</p>
             <ul>
-              <li>CFVn-0310:</li>
+              <li>CFVn-0310/CFWest-0311:</li>
               <li>          修复挑战模式部分怪物无法击杀</li>
               <li>          Fix auto kill ai can not all monsters.</li>
               <li>CFVn-0302:</li>
