--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
           <div>
             <p>Update Logs:</p>
             <ul>
+              <li>CFVn-0314/CFWest-0314:</li>
+              <li>          修复部分模式掉帧</li>
+              <li>          Fix FPS drop.</li>
               <li>CFVn-0310/CFWest-0311:</li>
               <li>          修复挑战模式部分怪物无法击杀</li>
               <li>          Fix auto kill ai can not all monsters.</li>
